<resources>
    <string name="app_name">Granule</string>
    <string name="Register_input_string">Name</string>
    <string name="register_input_email">Email</string>
    <string name="register_input_pass">Password</string>
    <string name="register_button_string">Register</string>
    <string name="login_acitivity_heading_striing">Login to your Granule Acoount</string>
    <string name="login_layout_email_field_string">Password</string>
    <string name="login_layout_butn">Login</string>
    <string name="login_layout_email_feild">Email</string>
    <string name="log_out_string_menu">Log Out</string>
    <string name="content_image_desc">basic image showing a rocket</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="register_a_new_granule_account">Register a new Granule Account!</string>
    <string name="log_outt">Log Out</string>
    <string name="menu_profile_text">Profile</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
